add novel list
