# route/route.go
@@ -4,6 +4,7 @@ import (
 	"log"
 
 	"test/app/Http/api/v1/account"
+	"test/app/Http/api/v1/comic"
 	"test/app/Http/api/v1/novel"
 
 	"github.com/gofiber/fiber/v2"
@@ -21,6 +22,9 @@ func SetApiRoutes(app *fiber.App) {
 			v1.Get("/book/search", novel.BookSearch)
 			v1.Get("/book/:id", novel.BookInfo)
 			v1.Get("/book/:id/:page", novel.BookDetail)
+			v1.Get("/bookList/:id", novel.BookList)
+
+			v1.Get("/comic/list/:comicname/:page", comic.PageList)
 		}
 	}
 }
